--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
  - wget https://sourceforge.net/projects/pyqt/files/sip/sip-4.19.8/sip-4.19.8.tar.gz
  - tar xf sip-4.19.8.tar.gz
  - cd sip-4.19.8
- - echo 'yes' | python ./configure
+ - echo 'yes' | python ./configure.py
  - make -j9
  - make install
  - cd ..
