--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,6 @@ addons:
       - libstdc++6
       - qtchooser
       - qt5-qmake
+      - qt5-default
 install: pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
 script: python make.py build all
