--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python: 2.7
 sudo: required
 before_script:
+ - export PROJDIR=$PWD
  - wget https://sourceforge.net/projects/pyqt/files/sip/sip-4.19.8/sip-4.19.8.tar.gz
  - tar xf sip-4.19.8.tar.gz
  - cd sip-4.19.8
@@ -14,10 +15,10 @@ before_script:
  - wget https://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.10.1/PyQt5_gpl-5.10.1.tar.gz
  - tar -xf PyQt5_gpl-5.10.1.tar.gz
  - cd PyQt5_gpl-5.10.1
- - echo 'yes' | python ./configure.py
+ - echo 'yes' | python ./configure.py --no-python-dbus --no-qml-plugin --no-qsci-api --no-tools --confirm-license --disable QtHelp --disable QtMultimedia --disable QtMultimediaWidgets --disable QtNetwork --disable QtOpenGL --disable QtPrintSupport --disable QtQml --disable QtQuick --disable QtSql --disable QtSvg --disable QtTest --disable QtWebKit --disable QtWebKitWidgets --disable QtXml --disable QtXmlPatterns --disable QtDesigner --disable QAxContainer --disable QtDBus --disable QtWebSockets --disable QtWebChannel --disable QtNfc --disable QtBluetooth --disable QtX11Extras --disable QtQuickWidgets --disable _QOpenGLFunctions_2_0 --disable _QOpenGLFunctions_2_1 --disable _QOpenGLFunctions_4_1_Core
  - make -j9
  - make install
- - cd ../PyChat
+ - cd PROJDIR
 addons:
   apt:
     packages:
