--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ build:
   shell: mingw32
   pull: true
   commands:
-    - pacman -Sy
+    - pacman -Syu
     - pacman --needed -S bash pacman pacman-mirrors msys2-runtime
     - pacman --needed -S mingw/mingw-w64-python2-pyqt5
     - pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
