--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,6 @@ build:
   commands:
     - pacman -Syu
     - pacman --needed -S bash pacman pacman-mirrors msys2-runtime
-    - pacman -Ss python2-pyqt5
+    - pacman --needed -S mingw64/mingw-w64-x86_64-python2-pyqt5
     - pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
     - python make.py build all
