added python install step

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ build:
     - pacman -Syu
     - pacman --needed -S bash pacman pacman-mirrors msys2-runtime
     - pacman --needed -S mingw64/mingw-w64-x86_64-python2-pyqt5
-    - pacman -Ss python
+    - pacman --needed -S mingw64/mingw-w64-x86_64-python2
     - easy_install pip
     - pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
     - python make.py build all
