--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ build: false
 environment:
   matrix:
     - PYTHON: "C:\\Python27"
-      PyQt: https://downloads.sourceforge.net/project/pyqt/PyQt5/PyQt-5.6/PyQt5-5.6-gpl-Py3.5-Qt5.6.0-x32-2.exe"
+      PyQt: "https://downloads.sourceforge.net/project/pyqt/PyQt5/PyQt-5.6/PyQt5-5.6-gpl-Py3.5-Qt5.6.0-x32-2.exe"
 init:
   - "ECHO %PYTHON%"
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
