--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ install:
   - REG ADD HKCU\Software\Python\PythonCore\2.7\InstallPath /f /ve /t REG_SZ /d %PYTHON%
   - ps: (new-object net.webclient).DownloadFile($env:PyQt, "C:\install-PyQt5.exe")
   - ps: Start-Process -FilePath C:\install-PyQt5.exe -ArgumentList "/S" -Wait -Passthru
-  - "python -c \'from PyQt5 import QtCore\'"
+  - "python -c \"from PyQt5 import QtCore\""
   - "pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip"
 test_script:
   - "python make.py build all"
