--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,15 +13,14 @@ install:
   - ps: (new-object net.webclient).DownloadFile($env:SIP, "C:\SIP.zip")
   - ps: Expand-Archive "C:\PyQt5.zip" "C:\PyQt5"
   - ps: Expand-Archive "C:\SIP.zip" "C:\SIP"
-  - cd C:\SIP
-  - dir
+  - cd C:\SIP\sip-4.19.8
   - python configure.py
   - C:\Qt\5.10.1\msvc2017_64\bin\qtenv2.bat
-  - cd C:\SIP
+  - cd C:\SIP\sip-4.19.8
   #- "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat"
   - nmake
   - nmake install
-  - cd C:\PyQt5
+  - cd C:\PyQt5\PyQt-5.10.1
   - python ./configure.py --no-python-dbus --no-qml-plugin --no-qsci-api --no-tools --confirm-license --disable QtNfc --disable QtHelp --disable QtMultimedia --disable QtMultimediaWidgets --disable QtNetwork --disable QtOpenGL --disable QtPrintSupport --disable QtQml --disable QtQuick --disable QtSql --disable QtSvg --disable QtTest --disable QtWebKit --disable QtWebKitWidgets --disable QtXml --disable QtXmlPatterns --disable QtDesigner --disable QAxContainer --disable QtDBus --disable QtWebSockets --disable QtWebChannel --disable QtNfc --disable QtBluetooth --disable QtX11Extras --disable QtQuickWidgets --disable _QOpenGLFunctions_2_0 --disable _QOpenGLFunctions_2_1 --disable _QOpenGLFunctions_4_1_Core
   - nmake
   - nmake install
