--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,9 @@ install:
   - ps: Expand-Archive "C:\SIP.zip" "C:\SIP"
   - cd C:\SIP\sip-4.19.8
   - python configure.py
-  - dir C:\Qt\5.10.1\msvc2015_64\bin\qtenv2.bat
+  - C:\Qt\5.10.1\msvc2015_64\bin\qtenv2.bat
   - cd C:\SIP\sip-4.19.8
-  #- "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat"
+  - dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0"
   - nmake
   - nmake install
   - cd C:\PyQt5\PyQt-5.10.1
