--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,10 @@
 install:
   - set QT_VER=5.9
   - set PYQT_VER=5.9
+  - cd C:\project\pychat
   - if not exist %QT_DIR%\bin\Qt5Core.dll (
       echo "No cache found, building qt" &
-      call ci_tools\build_install_qt.bat
+      call C:\project\pychat\ci_tools\build_install_qt.bat
     ) else (
       echo "Found existing cache in %QT_DIR%" &
       dir %QT_DIR%
