fixed script name

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 install:
   - set QT_VER=5.9
   - set PYQT_VER=5.9
-  - call ci_tools\build_qt.bat
+  - call ci_tools\build_pyqt.bat
   - pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
 
 build: off
