add deploy to github

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,16 @@
 artifacts:
   - path: 'bin\win32\*'
+deploy:
+  release: pychat-v$(appveyor_build_version)
+  provider: GitHub
+  auth_token:
+    secure: "/I7CCV5RADMxVOyxKNxD+uw22cPMGwyRs170w27CUpkP1Iw7Yv3b6MgneyAsXYMP"
+  artifact: 'bin\win32\*'
+  draft: false
+  prerelease: true
+  on:
+    branch: master
+    appveyor_repo_tag: true
 
 install:
   - pip install pydh twisted pycryptodome pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix.zip
