--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ artifacts:
   - path: 'bin\win32\*'
 
 install:
-  - pip install yaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
+  - pip install pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
 
 build: off
 
