--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,9 @@ artifacts:
   - path: 'bin\win32\*'
 
 install:
-  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
+  - pip install urllib3[secure] six pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
 
 build: off
 
 test_script:
-  - cd C:\projects\thatchat
   - python make.py build all
