--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,7 @@ addons:
       - qtchooser
       - qt5-qmake
       - qt5-default
-install: pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
+install:
+  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
+  - pip install --upgrade setuptools
 script: python make.py build all
