--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,22 @@ dist: trusty
 #  skip_cleanup: true
 #  on:
 #    tags: true
-before_script:
- - export PROJDIR=$PWD
- - wget https://sourceforge.net/projects/pyqt/files/sip/sip-4.19.8/sip-4.19.8.tar.gz
- - tar xf sip-4.19.8.tar.gz
- - cd sip-4.19.8
- - echo 'yes' | python ./configure.py
- - make -j9
- - make install
- - cd ..
- - wget https://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.10.1/PyQt5_gpl-5.10.1.tar.gz
- - tar -xf PyQt5_gpl-5.10.1.tar.gz
- - cd PyQt5_gpl-5.10.1
- - python ./configure.py --no-python-dbus --no-qml-plugin --no-qsci-api --no-tools --confirm-license --disable QtNfc --disable QtHelp --disable QtMultimedia --disable QtMultimediaWidgets --disable QtNetwork --disable QtOpenGL --disable QtPrintSupport --disable QtQml --disable QtQuick --disable QtSql --disable QtSvg --disable QtTest --disable QtWebKit --disable QtWebKitWidgets --disable QtXml --disable QtXmlPatterns --disable QtDesigner --disable QAxContainer --disable QtDBus --disable QtWebSockets --disable QtWebChannel --disable QtNfc --disable QtBluetooth --disable QtX11Extras --disable QtQuickWidgets --disable _QOpenGLFunctions_2_0 --disable _QOpenGLFunctions_2_1 --disable _QOpenGLFunctions_4_1_Core
- - make -j9
- - make install
- - cd $PROJDIR
+#before_script:
+# - export PROJDIR=$PWD
+# - wget https://sourceforge.net/projects/pyqt/files/sip/sip-4.19.8/sip-4.19.8.tar.gz
+# - tar xf sip-4.19.8.tar.gz
+# - cd sip-4.19.8
+# - echo 'yes' | python ./configure.py
+# - make -j9
+# - make install
+# - cd ..
+# - wget https://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.10.1/PyQt5_gpl-5.10.1.tar.gz
+# - tar -xf PyQt5_gpl-5.10.1.tar.gz
+# - cd PyQt5_gpl-5.10.1
+# - python ./configure.py --no-python-dbus --no-qml-plugin --no-qsci-api --no-tools --confirm-license --disable QtNfc --disable QtHelp --disable QtMultimedia --disable QtMultimediaWidgets --disable QtNetwork --disable QtOpenGL --disable QtPrintSupport --disable QtQml --disable QtQuick --disable QtSql --disable QtSvg --disable QtTest --disable QtWebKit --disable QtWebKitWidgets --disable QtXml --disable QtXmlPatterns --disable QtDesigner --disable QAxContainer --disable QtDBus --disable QtWebSockets --disable QtWebChannel --disable QtNfc --disable QtBluetooth --disable QtX11Extras --disable QtQuickWidgets --disable _QOpenGLFunctions_2_0 --disable _QOpenGLFunctions_2_1 --disable _QOpenGLFunctions_4_1_Core
+# - make -j9
+# - make install
+# - cd $PROJDIR
 addons:
   apt:
     packages:
