--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ install:
   - echo 'deb http://mirror.servers.com/ubuntu/ xenial main restricted universe' | sudo tee -a /etc/apt/sources.list
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update
+  - sudo apt-get install libegl1-mesa-dev
   - sudo apt-get install libgles2-mesa-dev
   - sudo apt-get install qtbase5-dev
   - sudo apt-get install -y qtbase5-dev python-sip libc6 libgcc1 libqt5core5a libqt5dbus5 libqt5designer5 libqt5gui5 libqt5help5 libqt5network5 libqt5printsupport5 libqt5test5 libqt5widgets5 libqt5xml5 libstdc++6 qtchooser qt5-qmake qt5-default
