troubleshoot libmirclient-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ install:
   - echo 'deb http://mirror.servers.com/ubuntu/ xenial main restricted universe' | sudo tee -a /etc/apt/sources.list
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update
+  - sudo apt-get install libmirclient-dev
   - sudo apt-get install libegl1-mesa-dev
   - sudo apt-get install libgles2-mesa-dev
   - sudo apt-get install qtbase5-dev
