--- a/.travis.yml
+++ b/.travis.yml
@@ -50,16 +50,17 @@ sudo: required
 install:
   - echo 'deb http://us.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
-  - sudo apt-get update
-  - sudo apt-get install libmirclient9
-  - sudo apt-get install libmircommon-dev
-  - sudo apt-get install libmirclient-dev
-  - sudo apt-get install libegl1-mesa-dev
-  - sudo apt-get install libgles2-mesa-dev
-  - sudo apt-get install qtbase5-dev
+#  - sudo apt-get update
+#  - sudo apt-get install libmirclient9
+#  - sudo apt-get install libmircommon-dev
+#  - sudo apt-get install libmirclient-dev
+#  - sudo apt-get install libegl1-mesa-dev
+#  - sudo apt-get install libgles2-mesa-dev
+#  - sudo apt-get install qtbase5-dev
+  - sudo apt-get install python-pyqt5
   - sudo apt-get install -y qtbase5-dev python-sip libc6 libgcc1 libqt5core5a libqt5dbus5 libqt5designer5 libqt5gui5 libqt5help5 libqt5network5 libqt5printsupport5 libqt5test5 libqt5widgets5 libqt5xml5 libstdc++6 qtchooser qt5-qmake qt5-default
-  - wget http://mirrors.kernel.org/ubuntu/pool/universe/p/pyqt5/python-pyqt5_5.5.1+dfsg-3ubuntu4_amd64.deb
-  - sudo dpkg -i python-pyqt5_5.5.1+dfsg-3ubuntu4_amd64.deb
+#  - wget http://mirrors.kernel.org/ubuntu/pool/universe/p/pyqt5/python-pyqt5_5.5.1+dfsg-3ubuntu4_amd64.deb
+#  - sudo dpkg -i python-pyqt5_5.5.1+dfsg-3ubuntu4_amd64.deb
   - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
   - pip install --upgrade setuptools
 script: python make.py build all
