--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ sudo: required
 install:
   - echo 'deb http://us.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
-#  - sudo apt-get update
+  - sudo apt-get update
 #  - sudo apt-get install libmirclient9
 #  - sudo apt-get install libmircommon-dev
 #  - sudo apt-get install libmirclient-dev
