--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update
   - sudo apt-get install python-pyqt5
+  - sudo apt install python-pip
   - pip install twisted
   - pip install urllib3[secure] pyyaml pydh pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
   - pip install --upgrade setuptools
