--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ artifacts:
   - path: 'bin\win32\*'
 
 install:
-  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/bjones1/pyinstaller/archive/pyqt5_fix_cleaned.zip
+  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib pyinstaller
   - pip install --upgrade setuptools
 
 build: off
