--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ artifacts:
   - path: 'bin\win32\*'
 
 install:
-  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib pyinstaller
+  - pip install urllib3[secure] pyyaml pydh twisted pycryptodomex nclib https://github.com/pyinstaller/pyinstaller/archive/develop.zip
   - pip install --upgrade setuptools
 
 build: off
