--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ language: python
 python: 2.7
 sudo: required
 install:
-  - pip install twisted urllib3[secure] pyyaml pydh pycryptodomex nclib pyinstaller
-  - pip install --upgrade setuptools
+  - ./make.py deps -y
   - echo 'deb http://us.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - echo 'deb http://security.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update
